--- a/Node JS/Express-demo-tut-complete/package.json
+++ b/Node JS/Express-demo-tut-complete/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Suraj Gupta",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-validator": "^6.4.0"
+  }
 }
