--- a/Node JS/Express-demo-tut-complete/package.json
+++ b/Node JS/Express-demo-tut-complete/package.json
@@ -9,7 +9,9 @@
   "author": "Suraj Gupta",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.2.5",
     "express": "^4.17.1",
-    "express-validator": "^6.4.0"
+    "express-validator": "^6.4.0",
+    "pug": "^2.0.4"
   }
 }
